# jsk_robot

jsk_aero_robot/: README.md  aero.rosinstall  jsk_aero.rosinstall  jsk_aero.rosinstall.noetic
jsk_aero_robot/aeroeus/: .gitignore
jsk_aero_robot/jsk_aero_shop/typeWARABI/: robot.cfg
jsk_aero_robot/jsk_aero_shop/typeWARABI/urdf/: aero-upper.urdf.xacro
jsk_aero_robot/jsk_aero_shop/warabi_hand/urdf/: soft_exterior_hand.urdf.xacro
jsk_aero_robot/jsk_aero_startup/: package.xml
jsk_aero_robot/jsk_aero_startup/config/: aero_analyzers.yaml  jsk_startup.rviz
jsk_aero_robot/jsk_aero_startup/launch/: aero.launch  aero_base.xml  aero_slam.launch  diagnostics.launch  republish_images.launch  rviz.launch  sensor_bringup.xml  speech_interaction.launch  speech_recognition.launch  xtion_bringup.launch
jsk_aero_robot/jsk_aero_startup/launch/tts/: google_cloud_texttospeech.launch
jsk_aero_robot/jsk_aero_startup/scripts/: boot_sound.py  camera_check.py
jsk_aero_robot/jsk_aero_startup/test/: aero.test.xml
jsk_fetch_robot/fetcheus/: fetch-interface.l
jsk_fetch_robot/jsk_fetch_startup/launch/: fetch_bringup.launch  fetch_gazebo_bringup.launch
jsk_pr2_robot/jsk_pr2_startup/: jsk_pr2.rosinstall  pr2.launch
jsk_pr2_robot/jsk_pr2_startup/jsk_pr2_move_base/: amcl_node.xml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.xml  move_base_params.yaml  pr2_2dnav.launch  recovery_behaviors.yaml
jsk_robot_common/jsk_robot_startup/config/: install_rc.sh
jsk_robot_common/jsk_robot_startup/init.d/: endbootstartshutdownbeep.sh  endshutdownbeep.sh
