<?xml version="1.0"?>
<package>
  <name>jsk_aero_startup</name>
  <version>1.1.0</version>
  <description>The jsk_aero_startup package</description>
  <maintainer email="youhei@jsk.imi.i.u-tokyo.ac.jp">Yohei Kakiuchi</maintainer>
  <maintainer email="higashide@jsk.imi.i.u-tokyo.ac.jp">Taichi Higashide</maintainer>
  <maintainer email="sasabuchi@jsk.imi.i.u-tokyo.ac.jp">Kazuhiro Sasabuchi</maintainer>

  <license>BSD</license>

  <author email="higashide@jsk.imi.i.u-tokyo.ac.jp">Taichi Higashide</author>
  <author email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</author>
  <author email="sasabuchi@jsk.imi.i.u-tokyo.ac.jp">Kazuhiro Sasabuchi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>aero_teleop</run_depend>
  <run_depend>aeroeus</run_depend>
  <run_depend>compressed_depth_image_transport</run_depend>
  <run_depend>compressed_image_transport</run_depend>
  <run_depend>google_cloud_texttospeech</run_depend>
  <run_depend>ros_speech_recognition</run_depend>
  <run_depend>jsk_maps</run_depend>
  <run_depend>jsk_robot_startup</run_depend>
  <run_depend>jsk_topic_tools</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>openni2_launch</run_depend>
  <run_depend>pr2_base_trajectory_action</run_depend>
  <run_depend>seedhand_std</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>yocs_cmd_vel_mux</run_depend>

  <!-- for diagnostics -->
  <run_depend>diagnostic_aggregator</run_depend>
  <run_depend>sysstat</run_depend>

</package>
